# push_Swap

./: CMakeLists.txt  Makefile  ToDo.txt  a.out  push_swap  test.c  tester_push_swap
Old/: median.c  push_b_five.c
Old/algo/: five.c
includes/: push_swap.h
libft/includes/: libft.h
libft/src/ft_mem/: ft_memcmp.c
libft/src/ft_printf/: ft_printf.c  hexa.c  hexastr.c
libft/src/ft_str/: ft_split.c  ft_strtrim.c
src/algo/: .five.c.swp  five.c  five_hundred.c  hundred.c
src/push_swap/: main.c  push_swap.c
src/shared/: binary.c  check_args.c  fill_stack.c  median.c  push_a.c  push_b.c  special_atoi.c  stack_management.c
